--- a/Tao/A1.org
+++ b/Tao/A1.org
@@ -1,7 +1,23 @@
 * A1
 A1.1 What is the negation of the statement "either X is true, or Y is true, but not both"?
+
+either X is true or Y is true: $X \lor Y$
+
+not both: $\lnot(X \land Y)$
+
+either X is true or Y is true, "but" not both
+
 $$
-X \or Y
+(X \lor Y) \land\lnot(X\land Y)
 $$
 
-Neither X is false and Y is false or both are true
+Negation
+
+$$
+\begin{align}
+\lnot((X \lor Y) \land\lnot(X\land Y))&=\lnot(X \lor Y) \lor \lnot(\lnot(X\land Y))\\
+&=(\lnot X\land\lnot Y)\lor (X\land Y)
+\end{align}
+$$
+
+Neither X is true nor Y is true or both are true
