--- a/Tao/Ch2.org
+++ b/Tao/Ch2.org
@@ -122,3 +122,48 @@ $\hspace{32pt}$ T
 $\hspace{16pt}\square$
 
 $\square$
+
+
+** 2.2.3 Prove Proposition 2.2.12 
+(Hint: you will need many of the preceding propositions, corollaries, and lemmas.)
+
+*Proposition 2.2.12* (Basic properties of order for natural numbers).
+
+/Let $a,b,c$ be natural numbers. Then/
+
+/(a) (Order is reflexive) $a\geq a$./
+
+/(b) (Order is transitive) If $a\geq b$ and $b\geq c$, then $a\geq c$./
+
+/(c) (Order is anti-symmertic) If $a\geq b$ and $b\geq a$, then $a=b$./
+
+/(d) (Addition preserves order) $a\geq b$ if and only if $a+c\geq b+c$./
+
+/(e) $a < b$ if and only if $a\hspace{-2pt}+\hspace{-4pt}+\leq b$./
+
+/(d) $a < b$ if and only if $b=a+d$ for some positive number $d$./
+
+
+$-------------------------------------------------------------------------$
+
+(a)
+
+$\bullet~~$ Show that $a\geq a$.
+
+$\Vdash~~$ $a\geq a$
+
+$\equiv~~$ {Definition 2.2.11}
+
+$\hspace{16pt}\bullet~~$ Show that $a=a+0$.
+
+$\hspace{16pt}\Vdash~~$ $a=a+0$
+
+$\hspace{16pt}\equiv~~$ {Lemma 2.2.2}
+
+$\hspace{32pt}$ T
+
+$\hspace{16pt}\square$
+
+$\cdots~~$ T
+
+$\square$
